--- a/madlibs.html
+++ b/madlibs.html
@@ -13,7 +13,7 @@
         var userinput3 = prompt("Enter a verb");
         var userinput4 = prompt("Enter an adverb");
 
-        console.log("On a tropical " + userinput2 + "," + " Underneath a " + userinput1 + " moon. Hangin' with the hula dancers, " + userinput4 + " Askin' questions cause' they got all the answers.");
+        console.log("On a tropical " + userinput2 + "," + " Underneath a " + userinput1 + " moon. " + userinput3 " with the hula dancers, " + userinput4 + " Askin' questions cause' they got all the answers.");
     </script>
 </body>
 </html>
